# bci-vscore

./: CMakeLists.txt
src/: CMakeLists.txt  plugin.cpp  plugin.h
